# simple-file-storage

./: .hindent.yaml  .pre-commit-config.yaml  README.md  cabal.project  simple-file-storage.cabal
pab/: Main.hs
src/Plutus/Contracts/: FileStorage.hs  ScriptToken.hs  Utils.hs
src/Plutus/Contracts/FileStorage/: File.hs  Request.hs  Shard.hs  Types.hs  Utils.hs
src/Plutus/Contracts/ScriptToken/: Policy.hs  Types.hs
