cabal-version:      2.4
name:               simple-file-storage
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Marc Terence Co
maintainer:         mrctrncco@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:
      Plutus.Contracts.FileStorage
      Plutus.Contracts.FileStorage.File
      Plutus.Contracts.FileStorage.Request
      Plutus.Contracts.FileStorage.Shard
      Plutus.Contracts.FileStorage.Types
    other-modules:
      Plutus.Contracts.FileStorage.Utils
    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      containers,
      freer-extras,
      playground-common,
      plutus-contract,
      plutus-tx-plugin,
      plutus-tx,
      plutus-ledger,
      plutus-use-cases,
      text,
      utf8-string
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
            -- See Plutus Tx readme
            -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

-- test-suite plutus-example-projects-test
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   hs-source-dirs: examples/test
--   other-modules:
--     Spec.Game
--   default-language: Haskell2010
--   ghc-options: -Wall -Wnoncanonical-monad-instances
--               -Wincomplete-uni-patterns -Wincomplete-record-updates
--               -Wredundant-constraints -Widentities -rtsopts
--               -- See Plutus Tx readme
--               -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
--   build-depends:
--     plutus-tx -any,
--     plutus-tx-plugin,
--     plutus-contract -any,
--     plutus-ledger -any,
--     simple-file-storage
--   build-depends:
--     base >=4.9 && <5,
--     tasty -any,
--     tasty-hunit -any,
--     tasty-hedgehog >=0.2.0.0

executable simple-file-storage-pab
  main-is: Main.hs
  hs-source-dirs: pab
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    plutus-contract -any,
    plutus-pab -any,
    simple-file-storage,
    aeson -any,
    freer-simple -any,
    prettyprinter -any,
    freer-extras -any,
    plutus-ledger -any
